Use object monitor for index
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>